--- a/assets/scss/pages/_myinfo.scss
+++ b/assets/scss/pages/_myinfo.scss
@@ -166,7 +166,7 @@
         a {
             display: block;
             text-align: center;
-            padding:vw(38) 0 vw(30);
+            padding:vw(38) 0 0;
             img {
                 width: vw(150);
             }
