--- a/assets/scss/pages/_myinfo.scss
+++ b/assets/scss/pages/_myinfo.scss
@@ -1,4 +1,5 @@
 .myinfo {
+    margin-top: vw(68);
     margin-bottom: vw(50);
     padding:0 vw(15) 0;
     .btn_app {
@@ -205,16 +206,15 @@
     }
 }
 @include desktop {
-    main {
-        .tit {
-            margin-top: 100px;
-        }
-    }
     
     .myinfo {
         width: 1030px;
         margin:0 auto 100px;
-        padding:0;        
+        padding:0;
+        & ~ .tit{
+
+            margin-top: 100px;
+        }
         .btn_app {
             margin-top: 60px;
         }
