--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5091,7 +5091,9 @@ main > .tit {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 75vw;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   margin: 9.72222vw auto;
   padding: 1.38889vw 4.44444vw;
   border: 1px solid #555;
@@ -5419,6 +5421,19 @@ main > .tit {
   background-color: #9255E4;
 }
 
+.result.form {
+  margin-bottom: 0;
+}
+
+.result.form .book_order_list {
+  color: #000;
+}
+
+.result.form .book_order_list b {
+  font-weight: 500;
+  color: #666;
+}
+
 .result .award_list li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5544,6 +5559,67 @@ main > .tit {
   margin-top: 3.88889vw;
 }
 
+.result .result_foot a {
+  display: block;
+  text-align: center;
+  padding: 10.55556vw 0 0;
+}
+
+.result .result_foot a img {
+  width: 41.66667vw;
+}
+
+.form_tit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 9.72222vw auto;
+  padding: 1.38889vw 4.44444vw;
+  border: 1px solid #555;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 5.55556vw;
+  font-weight: 500;
+  color: #000;
+}
+
+.btn_save {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 14.44444vw;
+  margin: 0 -4.16667vw;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.btn_save span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  color: #fff;
+  font-size: 5vw;
+  font-weight: 500;
+  padding-left: 7.5vw;
+  background: url(../img/ico_download.svg) no-repeat 0 50%/5.83333vw;
+}
+
 @media (min-width: 1030px) {
   .result {
     width: 1030px;
@@ -5628,6 +5704,338 @@ main > .tit {
   .result .result_box .btn_app {
     width: 600px;
     margin-top: 30px;
+  }
+  .result .result_foot a {
+    display: block;
+    text-align: center;
+    padding: 60px 0;
+  }
+  .result .result_foot a img {
+    width: 150px;
+  }
+  .form_tit {
+    width: 395px;
+    margin: 60px auto;
+    padding: 10px 0;
+    border: 1px solid #555;
+    border-left: 0 solid #000;
+    border-right: 0 solid #000;
+    font-size: 30px;
+    color: #333;
+  }
+}
+
+._print .myinfo {
+  width: 1030px;
+  margin: 0 auto 100px;
+  padding: 0;
+}
+
+._print .myinfo ~ .tit {
+  margin-top: 100px;
+}
+
+._print .myinfo .btn_app {
+  margin-top: 60px;
+}
+
+._print .myinfo h2 {
+  font-size: 24px;
+  margin: 60px 0 16px;
+}
+
+._print .myinfo .info_txt {
+  position: static;
+  text-align: right;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+._print .myinfo .info_txt.pos {
+  position: absolute;
+  top: 0;
+}
+
+._print .myinfo .btn {
+  height: 38px;
+  padding: 0 20px;
+  font-size: 21px;
+}
+
+._print .myinfo .btn span {
+  padding-right: 20px;
+  background: url(../img/ico_poly_right_w.svg) no-repeat 100% 50%/8px 14px;
+}
+
+._print .myinfo .checkbox_wrap {
+  top: -5px;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+._print .myinfo .checkbox_wrap label {
+  font-size: 20px;
+}
+
+._print .myinfo .checkbox_wrap label span {
+  margin-left: 5px;
+  letter-spacing: -0.03em;
+}
+
+._print .myinfo .refund_form {
+  margin: 0;
+}
+
+._print .myinfo .refund_form li {
+  font-size: 22px;
+}
+
+._print .myinfo .refund_form li b {
+  width: 210px;
+  padding: 17px 40px;
+  letter-spacing: -0.05em;
+}
+
+._print .myinfo .refund_form li div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 14px 40px 15px 0px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+._print .myinfo .refund_form li div input {
+  height: 40px;
+  padding-left: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+._print .myinfo .refund_form li div input + input {
+  width: 40%;
+  margin-top: 0;
+  margin-left: 7px;
+}
+
+._print .myinfo .refund_form li div select {
+  width: 114px;
+  background: #fff url(../img/ico_select.svg) no-repeat right 13px top 50%/10px 16px;
+  height: 40px;
+  padding-left: 10px;
+  font-size: 22px;
+  margin-right: 15px;
+}
+
+._print .myinfo .refund_form li div .btn_coupon {
+  height: 40px;
+  padding: 0 12px;
+  margin-right: 15px;
+  font-size: 21px;
+}
+
+._print .myinfo .refund_form li div .btn_coupon + strong {
+  font-size: 26px;
+  display: inline-block;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+._print .myinfo .refund_form li div .btn_coupon + strong + span {
+  font-size: 18px;
+  color: #777;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  margin-left: 10px;
+}
+
+._print .myinfo .refund_form li div strong {
+  font-size: 26px;
+}
+
+._print .myinfo .refund_form li .pc_300 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 300px;
+          flex: 0 300px;
+}
+
+._print .myinfo .refund_form li .pc_460 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 460px;
+          flex: 0 460px;
+}
+
+._print .myinfo .test_box {
+  border: 3px solid #999;
+  padding: 20px 30px;
+  font-weight: 500;
+  font-size: 22px;
+  letter-spacing: -0.03em;
+  color: #333;
+}
+
+._print .myinfo .test_box i {
+  text-decoration: underline;
+}
+
+._print .myinfo .how_online {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+._print .myinfo .how_online li {
+  background: #F0F1F2;
+  border: 3px solid #999;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  margin-right: 50px;
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: -0.05em;
+  width: 230px;
+}
+
+._print .myinfo .how_online li p {
+  background-color: #fff;
+  padding: 10px 0;
+}
+
+._print .myinfo .how_online li p em {
+  font-weight: 500;
+}
+
+._print .myinfo .how_online li b {
+  display: block;
+  font-weight: 500;
+  padding: 10px 0;
+}
+
+._print .myinfo .how_online li::after {
+  display: block;
+  content: '';
+  background: url(../img/ico_arrow_online.svg) no-repeat 50%;
+  width: 50px;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  right: -53px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+._print .myinfo .how_online li:last-child {
+  margin-right: 0;
+  width: 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+._print .myinfo .how_online li:last-child::after {
+  display: none;
+}
+
+._print .myinfo .how_online li:nth-child(3) {
+  width: 260px;
+}
+
+._print .myinfo .myinfo_foot a {
+  display: block;
+  text-align: center;
+  padding: 60px 0;
+}
+
+._print .myinfo .myinfo_foot a img {
+  width: 150px;
+}
+
+._print .form_tit {
+  width: 395px;
+  margin: 60px auto;
+  padding: 10px 0;
+  border: 1px solid #555;
+  border-left: 0 solid #000;
+  border-right: 0 solid #000;
+  font-size: 30px;
+  color: #333;
+}
+
+._print .tbl_p {
+  border-top: 1px solid #999;
+}
+
+._print .tbl_p th,
+._print .tbl_p td {
+  font-size: 22px;
+  letter-spacing: -0.03em;
+  border: 1px solid #999;
+  border-top: 0 solid #000;
+  padding: 20px 0 20px 30px;
+  text-align: left;
+}
+
+._print .tbl_p th {
+  background-color: #F4F5F7;
+  font-weight: 500;
+}
+
+._print .tbl_p th:first-child {
+  border-left: 0 solid #000;
+}
+
+._print .tbl_p td:last-child {
+  border-right: 0 solid #000;
+}
+
+._print .tbl_p td b {
+  color: #EA5504;
+}
+
+._print .text_list {
+  background-color: #F0F1F2;
+  padding: 30px 40px;
+  margin: 0;
+  font-size: 20px;
+  letter-spacing: -0.05em;
+}
+
+._print .text_list li {
+  padding-left: 12px;
+  margin-bottom: 5px;
+}
+
+._print .text_list li::after {
+  width: 3px;
+  height: 3px;
+  top: 11px;
+}
+
+._print .text_list li p {
+  margin-top: 0;
+}
+
+@media print {
+  ._print {
+    zoom: 0.5;
   }
 }
 
