--- a/assets/scss/pages/_print.scss
+++ b/assets/scss/pages/_print.scss
@@ -1,224 +1,16 @@
-.myinfo {
-    margin-top: vw(68);
-    margin-bottom: vw(50);
-    padding:0 vw(15) 0;
-    .btn_app {
-        margin-top: vw(40);
-    }
-    .cont_wrap {
-        position: relative;
-    }
-    h2 {
-        font-size: vw(18);
-        text-align: left;
-        font-weight: 500;
-        letter-spacing: -0.05em;
-        margin: vw(32) 0 vw(10);
-        color:#000;
-        span {
-            color:#EA5504;
-        }
-    }
-    .info_txt {
-        position: absolute;
-        right:vw(5);
-        top:vw(2);
-        font-size: vw(14);
-        color:#777;
-        span {
-            color:#EA5504;
-        }
-    }
-    .btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: vw(23);
-        margin:0 auto;
-        border-radius: 3px;
-        padding:0 vw(9.5);
-        font-size: vw(15);
-        font-weight: 700;
-        color:#fff;
-        span {
-            padding-right: vw(10);
-            background: url(../img/ico_poly_right_w.svg) no-repeat 100% 50% / vw(5) vw(7);
-        }
-        &.ogrange {
-            background-color: #EA5504;
-        }
-        &.purple {
-            background-color: #9255E4;
-        }
-    }
-    .book_order_list {
-        .btn {
-            display: inline-flex;
-            margin:0;
-            margin-left: vw(5);
-            margin-right: auto;
-        }
-    }
-    &.form {
-        margin-bottom: 0;
-        .book_order_list {
-            color:#000;
-            b {
-                font-weight: 500;
-                color:#666;
-            }
-        }
-    }
-    .tbl {
-        td {
-            a {
-                color: #EA5504;
-                text-decoration: underline;
-            }
-        }
-    }
-
-    .checkbox_wrap {
-        position: absolute;
-        top:vw(-10);
-        right:0;
-        margin-top: vw(12);
-        margin-bottom:vw(30);
-        label {
-            display: flex;
-            align-items: center;
-            font-size: vw(15);
-            color:#666;
-            span {
-                margin-left: vw(4);
-                display: inline-block;
-                transform: translateY(-1px);
-            }
-        }
-    }
-
-    .refund_form {
-        margin:0 vw(-15);
-        border-top: 1px solid #CACACA;
-        li {
-            border-bottom: 1px solid #CACACA;
-            background-color: #F4F5F7;
-            display: flex;
-            align-items: center;
-            font-size: vw(16);
-            b {
-                width: vw(90);
-                padding: vw(14) vw(13);
-                color:#999;
-                height: 100%;
-                font-weight: 700;
-                box-sizing: border-box;
-            }
-            div {
-                flex: 1;
-                padding:vw(10) vw(15) vw(10) 0;
-
-                input {
-                    width: 100%;
-                    border: 1px solid #c4c4c4;
-                    height: vw(33);
-                    display: flex;
-                    align-items: center;
-                    padding-left: vw(7);
-                    & + input {
-                        margin-top: vw(7);
-                    }
-                }
-                select {
-                    min-width: vw(112);
-                    background:#fff url(../img/ico_select.svg) no-repeat right vw(9) top 50% / vw(16.75) vw(13);
-                    border: 1px solid #c4c4c4;
-                    height: vw(33);
-                    padding-left: vw(7);
-                    font-size: vw(16);
-                }
-                .btn_coupon {
-                    height: vw(32);
-                    color:#fff;
-                    background-color:#999;
-                    border-radius: 3px;
-                    padding:0 vw(10);
-                    margin-right: vw(12);
-                    font-size: vw(15);
-                    font-weight: 700;
-                    & + strong {
-                        color:#000;
-                        font-weight: 500;
-                        font-size: vw(18);
-                    }
-                    &.on {
-                        background-color: #EA5504;
-                    }
-                }
-                strong {
-                    color:#EA5504;
-                    font-size: vw(18);
-                    font-weight: 500;
-                }
-            }
-        }
-    }
-    .myinfo_foot {
-        a {
-            display: block;
-            text-align: center;
-            padding:vw(38) 0 0;
-            img {
-                width: vw(150);
-            }
-        }
-    }
-}
-.form_tit {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: fit-content;
-    margin:vw(35) auto;
-    padding:vw(5) vw(16);
-    border: 1px solid #555;
-    box-sizing: border-box;
-    font-size: vw(20);
-    font-weight: 500;
-    color:#000;
-}
-.btn_save {
-    display: flex;
-    height: vw(52);
-    margin:0 vw(-15);
-    text-align: center;
-    background: rgba(0, 0, 0, 0.6);
-    span {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin:0 auto;
-        color:#fff;
-        font-size: vw(18);
-        font-weight: 500;
-        padding-left: vw(27);
-        background: url(../img/ico_download.svg) no-repeat 0 50% / vw(21);
-    }
-}
-@include desktop {
-    
+._print {
     .myinfo {
         width: 1030px;
         margin:0 auto 100px;
         padding:0;
         & ~ .tit{
-
+    
             margin-top: 100px;
         }
         .btn_app {
             margin-top: 60px;
         }
-
+    
         h2 {
             font-size: 24px;
             margin: 60px 0 16px;
@@ -257,7 +49,7 @@
                 }
             }
         }
-
+    
         .refund_form {
             margin:0;
             li {
@@ -331,7 +123,7 @@
                 text-decoration: underline;
             }
         }
-
+    
         .how_online {
             display: flex;
             li {
@@ -352,13 +144,13 @@
                         font-weight: 500;
                     }
                 }
-
+    
                 b {
                     display: block;
                     font-weight: 500;
                     padding:10px 0;
                 }
-
+    
                 &::after {
                     display: block;
                     content: '';
@@ -385,7 +177,7 @@
                 }
             }
         }
-
+    
         .myinfo_foot {
             a {
                 display: block;
@@ -398,7 +190,7 @@
         }
     }
     .form_tit {
-
+    
         width: 395px;
         margin:60px auto;
         padding:10px 0;
@@ -408,4 +200,57 @@
         font-size: 30px;
         color:#333;
     }
+
+    .tbl_p {
+        border-top: 1px solid #999;
+        th,
+        td {
+            font-size: 22px;
+            letter-spacing: -0.03em;
+            border: 1px solid #999;
+            border-top: 0 solid #000;
+            padding:20px 0 20px 30px;
+            text-align: left;
+        }
+        th {
+            background-color: #F4F5F7;
+            font-weight: 500;
+            &:first-child {
+                border-left: 0 solid #000;
+            }
+        }
+        td {
+            &:last-child {
+                border-right: 0 solid #000;
+            }
+            b {
+                color:#EA5504; 
+            }
+        }
+    }
+
+    .text_list {
+        background-color: #F0F1F2;
+        padding:30px 40px;
+        margin:0;
+        font-size: 20px;
+        letter-spacing: -0.05em;
+        li {
+            padding-left: 12px;
+            margin-bottom: 5px;
+            &::after {
+                width: 3px;
+                height: 3px;
+                top:11px;
+            }
+            p {
+                margin-top: 0;
+            }
+        }
+    }
+    
+    @media print {
+        zoom: 0.5;
+    }    
 }
+
