--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -30,6 +30,7 @@ header.header {
 }
 .main_menu {
     padding:0 vw(20);
+    border-bottom: 2px solid #DBDBDB;
     .__nav ul {
         display: flex;
         justify-content: space-between;
