--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -167,7 +167,13 @@
             }
         }
     } 
+
+    .radar_chart {
+        margin-top: vw(20);
+    }
+    
 }
+
 
 .form_tit {
     display: flex;
