--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -530,6 +530,30 @@ main {
         }
     }
 }
+#message_layer {
+    position:fixed;
+    z-index:1000;
+    width:vw(227);
+    left:50%;
+    top:50%;
+    background: rgba(0, 0, 0, 0.9);
+    display:none;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    padding:5% 0;
+    border-radius: 6px;
+    box-sizing: border-box;
+    img {
+        width: vw(20);
+    }
+    p {
+        font-size: vw(16);
+        font-weight: 500;
+        color:#fff;
+        line-height: 1.4;
+        letter-spacing: -0.03em;
+    }
+}
 
 @include desktop {
     .btn_main {
@@ -597,7 +621,7 @@ main {
         left:50%;
         bottom:100px;
         z-index: 200;
-        transform: translateX(515px);
+        transform: translateX(545px);
         a + a {
             display: block;
             margin-top: 10px;
@@ -906,6 +930,17 @@ main {
                     margin-bottom: 10px;
                 }
             }
+        }
+    }
+    #message_layer {
+        width:360px;
+        padding:30px 0;
+        img {
+            width: 50px;
+        }
+        p {            
+            line-height: 26px;
+            font-size: 22px;
         }
     }
 }
