--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1980,6 +1980,71 @@ main > .tit {
   letter-spacing: -0.03em;
 }
 
+.paging {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.paging li {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.paging li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 6.66667vw;
+  height: 6.66667vw;
+  font-size: 4.16667vw;
+  color: #999;
+}
+
+.paging li a:hover, .paging li a.on {
+  color: #333;
+}
+
+.paging li a._next_end {
+  background: url(../img/ico_skip_next.svg) no-repeat 0 0/cover;
+}
+
+.paging li a._next {
+  background: url(../img/ico_next.svg) no-repeat 0 0/cover;
+}
+
+.paging li a._prev {
+  background: url(../img/ico_prev.svg) no-repeat 0 0/cover;
+}
+
+.paging li a._prev_end {
+  background: url(../img/ico_skip_prev.svg) no-repeat 0 0/cover;
+}
+
+.paging li:nth-child(n + 3):nth-child(-n + 9)::before {
+  display: block;
+  content: '';
+  width: 1px;
+  height: 3.88889vw;
+  background-color: #ececed;
+}
+
 @media (min-width: 1030px) {
   .btn_main {
     margin: 0 auto;
@@ -2372,6 +2437,17 @@ main > .tit {
   #message_layer p {
     line-height: 26px;
     font-size: 22px;
+  }
+  .paging li a {
+    width: 24px;
+    height: 24px;
+    font-size: 16px;
+  }
+  .paging li a.num {
+    padding: 0 3px;
+  }
+  .paging li:nth-child(n + 3):nth-child(-n + 9)::before {
+    height: 14px;
   }
 }
 
@@ -5834,6 +5910,322 @@ main > .tit {
     border-right: 0 solid #000;
     font-size: 30px;
     color: #333;
+  }
+}
+
+.customer {
+  margin-top: 10vw;
+  margin-bottom: 13.88889vw;
+  padding: 0 4.16667vw 0;
+}
+
+.customer .search_box {
+  margin: 15.55556vw auto 5.55556vw;
+  border-radius: 4.44444vw;
+  border: solid 3px #c4c4c4;
+  background-color: #fff;
+  width: 55.55556vw;
+  height: 8.88889vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 11.11111vw 0 4.16667vw;
+  position: relative;
+}
+
+.customer .search_box input {
+  border: 0 solid #000;
+  background: transparent;
+  font-size: 4.16667vw;
+  width: 100%;
+}
+
+.customer .search_box input::-webkit-input-placeholder {
+  color: #bbb;
+}
+
+.customer .search_box input:-ms-input-placeholder {
+  color: #bbb;
+}
+
+.customer .search_box input::-ms-input-placeholder {
+  color: #bbb;
+}
+
+.customer .search_box input::placeholder {
+  color: #bbb;
+}
+
+.customer .search_box button {
+  position: absolute;
+  right: 2.77778vw;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 6.66667vw;
+  height: 6.66667vw;
+  background: url(../img/ico_search.svg) no-repeat 0 0/cover;
+  border: 0 solid #000;
+  padding: 0;
+}
+
+.customer .notice_list {
+  margin: 0 -4.16667vw 5.55556vw;
+  border-top: 1px solid #cacaca;
+}
+
+.customer .notice_list li {
+  border-bottom: 1px solid #cacaca;
+}
+
+.customer .notice_list li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 3.61111vw 3.88889vw;
+  letter-spacing: -0.05em;
+}
+
+.customer .notice_list li b {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 1;
+          flex: 0 0 1;
+  font-weight: 400;
+  color: #333;
+  font-size: 4.44444vw;
+  line-height: 1.2;
+  padding-right: 4.16667vw;
+  word-break: keep-all;
+}
+
+.customer .notice_list li .date {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: right;
+  font-size: 4.16667vw;
+  color: #999;
+  -webkit-transform: translateY(-0.41667vw);
+          transform: translateY(-0.41667vw);
+}
+
+.customer .notice_list li._notice {
+  background: #FBFBFB;
+}
+
+.customer .notice_list li._notice b {
+  color: #EA5504;
+  font-weight: 500;
+}
+
+.customer .notice_view {
+  margin: 18.88889vw -4.16667vw 4.44444vw;
+  border-top: 1px solid #cacaca;
+  border-bottom: 1px solid #cacaca;
+}
+
+.customer .notice_view .tit_box {
+  background-color: #FBFBFB;
+  padding: 4.16667vw;
+  font-size: 4.44444vw;
+  font-weight: 500;
+  color: #333;
+  line-height: 1.4;
+  border-bottom: 1px solid #cacaca;
+}
+
+.customer .notice_view .tit_box .date {
+  font-size: 4.16667vw;
+  color: #999;
+  font-weight: 400;
+}
+
+.customer .notice_view .attach_file {
+  padding: 3.33333vw 4.16667vw;
+  border-bottom: 1px solid #cacaca;
+}
+
+.customer .notice_view .attach_file li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 4.16667vw;
+}
+
+.customer .notice_view .attach_file li b {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 1;
+          flex: 0 0 1;
+  background: #999;
+  border-radius: 0.83333vw;
+  color: #fff;
+  font-weight: 700;
+  height: 6.94444vw;
+  padding: 0 1.66667vw;
+  margin-right: 2.22222vw;
+}
+
+.customer .notice_view .attach_file li a {
+  color: #666;
+  text-decoration: underline;
+}
+
+.customer .notice_view .attach_file li + li {
+  margin-top: 2.22222vw;
+}
+
+.customer .notice_view .text_box {
+  padding: 5.55556vw 4.16667vw;
+  font-size: 4.16667vw;
+  letter-spacing: -0.05em;
+}
+
+.customer .notice_view .text_box p {
+  line-height: 1.6;
+  word-break: keep-all;
+  color: #666;
+}
+
+.customer .notice_view .text_box p + p {
+  margin-top: 2.77778vw;
+}
+
+.customer .btn_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.customer .btn_wrap .btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 8.88889vw;
+  background-color: #666;
+  border-radius: 0.83333vw;
+  margin: 0 1.11111vw;
+  padding: 0 2.36111vw;
+}
+
+.customer .btn_wrap .btn span {
+  color: #fff;
+  font-size: 4.16667vw;
+  font-weight: 700;
+  letter-spacing: -0.03em;
+}
+
+@media (min-width: 1030px) {
+  .customer {
+    width: 1030px;
+    margin: 0 auto 100px;
+    padding: 0;
+  }
+  .customer .search_box {
+    margin: 50px 0 30px auto;
+    border-radius: 20px;
+    width: 300px;
+    height: 40px;
+    padding: 0 54px 0 20px;
+  }
+  .customer .search_box input {
+    font-size: 18px;
+  }
+  .customer .search_box button {
+    right: 14px;
+    width: 28px;
+    height: 28px;
+  }
+  .customer .notice_list {
+    margin: 0 0 36px;
+  }
+  .customer .notice_list li a {
+    padding: 15px 40px;
+  }
+  .customer .notice_list li b {
+    font-size: 22px;
+    line-height: 1.6;
+    padding-right: 50px;
+  }
+  .customer .notice_list li .date {
+    font-size: 22px;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  .customer .notice_view {
+    margin: 50px 0 40px;
+  }
+  .customer .notice_view .tit_box {
+    padding: 30px;
+    font-size: 24px;
+    line-height: 1.4;
+  }
+  .customer .notice_view .tit_box .date {
+    font-size: 22px;
+  }
+  .customer .notice_view .attach_file {
+    padding: 25px 30px;
+  }
+  .customer .notice_view .attach_file li {
+    font-size: 21px;
+  }
+  .customer .notice_view .attach_file li b {
+    border-radius: 3px;
+    color: #fff;
+    height: 36px;
+    padding: 0 20px;
+    margin-right: 14px;
+  }
+  .customer .notice_view .attach_file li + li {
+    margin-top: 10px;
+  }
+  .customer .notice_view .text_box {
+    padding: 25px 30px;
+    font-size: 22px;
+  }
+  .customer .notice_view .text_box p {
+    line-height: 1.4;
+  }
+  .customer .notice_view .text_box p + p {
+    margin-top: 10px;
+  }
+  .customer .btn_wrap .btn {
+    height: 40px;
+    border-radius: 3px;
+    margin: 0 10px;
+    padding: 0 26px;
+  }
+  .customer .btn_wrap .btn span {
+    font-size: 21px;
   }
 }
 
