--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -6144,6 +6144,103 @@ main > .tit {
   letter-spacing: -0.03em;
 }
 
+.customer .faq_wrap {
+  margin: 5.55556vw -4.16667vw;
+}
+
+.customer .nav_menu {
+  overflow-x: auto;
+  background: #f3f3f3;
+}
+
+.customer .nav_menu ul {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 3.61111vw;
+  border-top: 1px solid #CACACA;
+  border-bottom: 1px solid #CACACA;
+}
+
+.customer .nav_menu ul li {
+  position: relative;
+  margin: 0 2.22222vw;
+}
+
+.customer .nav_menu ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 10.55556vw;
+  padding: 0;
+  font-size: 4.16667vw;
+  font-weight: 500;
+  letter-spacing: -0.05em;
+  color: #666;
+}
+
+.customer .nav_menu ul li.on::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 0.83333vw;
+  background-color: #333;
+  position: absolute;
+  left: 0;
+  top: -0.27778vw;
+}
+
+.customer .nav_menu ul li.on a {
+  color: #333;
+}
+
+.customer .faq_list li {
+  border-bottom: 1px solid #cacaca;
+  letter-spacing: -0.05em;
+  background: url(../img/ico_faq_down.svg) no-repeat right 1.38889vw top 2.5vw/10vw;
+}
+
+.customer .faq_list li.open {
+  background: url(../img/ico_faq_up.svg) no-repeat right 1.38889vw top 2.22222vw/10vw;
+}
+
+.customer .faq_list li.open .question p {
+  color: #EA5504;
+}
+
+.customer .faq_list li.open .answer {
+  display: block;
+}
+
+.customer .faq_list .question {
+  border-bottom: 1px solid #cacaca;
+  padding: 4.16667vw;
+  font-size: 4.44444vw;
+  padding-right: 22.22222vw;
+}
+
+.customer .faq_list .question p {
+  color: #333;
+}
+
+.customer .faq_list .answer {
+  display: none;
+  background-color: #FBFBFB;
+  padding: 2.77778vw 4.16667vw 5.55556vw;
+  font-size: 4.16667vw;
+  color: #666;
+  line-height: 1.6;
+}
+
 @media (min-width: 1030px) {
   .customer {
     width: 1030px;
@@ -6226,6 +6323,47 @@ main > .tit {
   }
   .customer .btn_wrap .btn span {
     font-size: 21px;
+  }
+  .customer .faq_wrap {
+    margin: 30px 0 36px;
+  }
+  .customer .nav_menu {
+    background-color: #F0F1F2;
+  }
+  .customer .nav_menu ul {
+    width: 100%;
+    padding: 0 25px;
+  }
+  .customer .nav_menu ul li {
+    margin: 0 21px;
+  }
+  .customer .nav_menu ul li a {
+    height: 60px;
+    font-size: 22px;
+  }
+  .customer .nav_menu ul li.on::before {
+    height: 3px;
+    top: -1px;
+  }
+  .customer .faq_list li {
+    cursor: pointer;
+    background: url(../img/ico_faq_down.svg) no-repeat right 35px top 15px/36px;
+  }
+  .customer .faq_list li.open {
+    background: url(../img/ico_faq_up.svg) no-repeat right 35px top 15px/36px;
+  }
+  .customer .faq_list li.open .question p {
+    font-weight: 500;
+  }
+  .customer .faq_list .question {
+    padding: 15px 40px;
+    font-size: 22px;
+    padding-right: 100px;
+  }
+  .customer .faq_list .answer {
+    padding: 20px 40px;
+    font-size: 22px;
+    line-height: 1.6;
   }
 }
 
